MyDemoOrg/force-app/main/default/objects/Stage__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>it shows the stage is active or not means in working condition and is currently on.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>