MyDemoOrg/force-app/main/default/objects/Stage__c/fields/Crowd_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Crowd_Capacity__c</fullName>
    <description>this is the number for the capacity of the stage.</description>
    <label>Crowd Capacity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>