MyDemoOrg/force-app/main/default/objects/Stage__c/fields/Festival__c.field-meta.xml
<CustomField>
    <fullName>Festival__c</fullName>
    <description>shows the stages are related to which festivals.</description>
    <label>Festival</label>
    <referenceTo>Festival__c</referenceTo>
    <relationshipLabel>Stages</relationshipLabel>
    <relationshipName>Stages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>