MyDemoOrg/force-app/main/default/objects/Stage__c/fields/Has_Piano__c.field-meta.xml
<CustomField>
    <fullName>Has_Piano__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This points out the stage has a piano or not.</description>
    <label>Has Piano</label>
    <type>Checkbox</type>
</CustomField>