MyDemoOrg/force-app/main/default/objects/Stage__c/fields/Main_Stage__c.field-meta.xml
<CustomField>
    <fullName>Main_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>it shows that is the stage is the main stage or not.</description>
    <label>Main Stage</label>
    <type>Checkbox</type>
</CustomField>