MyDemoOrg/force-app/main/default/objects/Stage__c/fields/Related_Stage__c.field-meta.xml
<CustomField>
    <fullName>Related_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Stage</label>
    <referenceTo>Stage__c</referenceTo>
    <relationshipLabel>Related Stages</relationshipLabel>
    <relationshipName>Stages</relationshipName>
    <type>Lookup</type>
</CustomField>