MyDemoOrg/force-app/main/default/objects/Stage__c/fields/Special_equipment_available__c.field-meta.xml
<CustomField>
    <fullName>Special_equipment_available__c</fullName>
    <description>this is the information about the stages content.</description>
    <label>Special equipment available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>lasers</fullName>
            </value>
            <value>
                <fullName>pyrotechnics</fullName>
            </value>
            <value>
                <fullName>smoke machines</fullName>
            </value>
            <value>
                <fullName>multiple drumsets,</fullName>
            </value>
            <value>
                <fullName>extra subwoofers</fullName>
            </value>
            <value>
                <fullName>Fireworks</fullName>
            </value>
            <value>
                <fullName>Fog Machines</fullName>
            </value>
            <value>
                <fullName>Speakers</fullName>
            </value>
            <value>
                <fullName>Spotlights</fullName>
            </value>
            <value>
                <fullName>Sub-woofers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>